examples/test/testpolicy14737.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14737
  namespace: namespace394
spec:
  podSelector:
    matchLabels:
      key17: value4
      key35: value8
      key49: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value8
      podSelector:
        matchLabels:
          key15: value8
